@@ -47,8 +47,8 @@ sub test_one_level_of_dependencies : Test
 
 sub test_two_level_of_dependencies : Test
 {
-    my $openchange = EBox::Global->modInstance('openchange');
-    is_deeply($openchange->enableModDependsRecursive(), [qw(ntp network firewall dns users mail)]);
+    my $mail = EBox::Global->modInstance('mail');
+    is_deeply($mail->enableModDependsRecursive(), [qw(ntp network firewall dns samba mail)]);
 }
 
 
