@@ -1,31 +1,0 @@
-<%args>
-    $openchangeProvisionedWithMySQL => 0
-    $openchangeConnectionString => undef
-    $openchangeNotificationsReady => 0
-
-    $openchangeNamedpropsMysqlUser => undef
-    $openchangeNamedpropsMysqlPass => undef
-    $openchangeNamedpropsMysqlHost => undef
-    $openchangeNamedpropsMysqlDb => undef
-</%args>
-[global]
-% if ($openchangeNotificationsReady) {
-    dcerpc endpoint servers = +epmapper, +mapiproxy, +asyncemsmdb
-% } else {
-    dcerpc endpoint servers = +epmapper, +mapiproxy
-% }
-    dcerpc_mapiproxy:server = true
-    dcerpc_mapiproxy:interfaces = exchange_emsmdb, exchange_nsp, exchange_ds_rfr
-    #dcerpc_mapiproxy:ndrdump = true
-
-% if ($openchangeProvisionedWithMySQL == 1 and defined $openchangeConnectionString) {
-    mapistore:namedproperties = mysql
-    namedproperties:mysql_user = <% $openchangeNamedpropsMysqlUser %>
-    namedproperties:mysql_pass = <% $openchangeNamedpropsMysqlPass %>
-    namedproperties:mysql_host = <% $openchangeNamedpropsMysqlHost %>
-    namedproperties:mysql_db = <% $openchangeNamedpropsMysqlDb %>
-
-    mapistore:indexing_backend = <% $openchangeConnectionString %>
-    mapiproxy:openchangedb = <% $openchangeConnectionString %>
-    #mapiproxy:openchangedb_logger = true
-% }
