@@ -12,7 +12,6 @@
 
     $print => 0
     $shares => 0
-    $openchange => 0
 </%args>
 <%init>
 use EBox::Gettext;
@@ -48,10 +47,6 @@ use EBox::Gettext;
 
 % if ($print) {
     include = /etc/samba/printers.conf
-% }
-
-% if ($openchange) {
-    include = /etc/samba/openchange.conf
 % }
 
 % if ($shares) {
