@@ -3,6 +3,7 @@
 	+ Use Clone instead of Clone::Fast
 	+ Some code adaptation to remove warnings with changes in Perl 5.2X
 	+ Remove deprecated 'remoteservices' internal module
+	+ Remove OpenChange crashes notifications in the dashboard
 	+ Get list of interfaces from /sys/class/net
 4.2.2
 	+ Allow upgrade of packages that are not present in QA repo
